--- a/storage/settings.json
+++ b/storage/settings.json
@@ -1,12 +1,1 @@
-{
-    "_token": "g8Ditt3gBNPPWB0wqYjj6R05M7C9NENqFAgGxdIF",
-    "_method": "post",
-    "facebook_link": "https:\/\/www.facebook.com\/mohammed.roumy",
-    "google_link": "https:\/\/www.google.com\/?hl=ar&authuser=0",
-    "twitter_link": "https:\/\/twitter.com\/mohammedAlRoumy",
-    "youtube_link": "https:\/\/www.youtube.com\/channel\/UCKZFe30q8shZyY-gyU_Wz9A?view_as=subscriber",
-    "aboutus": "about us content test",
-    "address": "gaza",
-    "phone": null,
-    "email": null
-}
+{"_token":"knC4Xzq7ISo5BnJ5xtcB72vcpKaxUtuOEQF3vOU1","_method":"post","facebook_link":"https:\/\/www.facebook.com\/mohammed.roumy","google_link":"https:\/\/www.google.com\/?hl=ar&authuser=0","twitter_link":"https:\/\/twitter.com\/mohammedAlRoumy","youtube_link":"https:\/\/www.youtube.com\/channel\/UCKZFe30q8shZyY-gyU_Wz9A?view_as=subscriber","aboutus":"\u0632\u0627\u062f: \u0645\u0643\u062a\u0628\u0629 \u062a\u062d\u0645\u064a\u0644 \u0643\u062a\u0628 pdf \u0639\u0631\u0628\u064a\u0629 \u0641\u064a \u062c\u0645\u064a\u0639 \u0627\u0644\u0645\u062c\u0627\u0644\u0627\u062a \u0643\u062a\u0628 \u0625\u0633\u0644\u0627\u0645\u064a\u0629 \u0648 \u0643\u062a\u0628 \u062a\u0646\u0645\u064a\u0629 \u0628\u0634\u0631\u064a\u0629 \u0648\u0631\u0648\u0627\u064a\u0627\u062a \u0639\u0631\u0628\u064a\u0629 \u0648\u0631\u0648\u0627\u064a\u0627\u062a \u0639\u0627\u0644\u0645\u064a\u0629 \u0645\u062a\u0631\u062c\u0645\u0629 \u0644\u0645\u062c\u0645\u0648\u0639\u0629 \u0643\u0628\u064a\u0631\u0629 \u0645\u0646 \u0627\u0644\u0645\u0624\u0644\u0641\u064a\u0646 \u0648\u0627\u0644\u0643\u062a\u0627\u0628 \u0627\u0644\u0639\u0631\u0628 \u0648\u0627\u0644\u0639\u0627\u0644\u0645\u064a\u064a\u0646 \u0646\u062a\u0645\u0646\u0649 \u0623\u0646 \u062a\u0646\u0627\u0644 \u0625\u0639\u062c\u0627\u0628\u0643\u0645.","address":"\u063a\u0632\u0629 \u060c \u0641\u0644\u0633\u0637\u064a\u0646","phone":"0590000000","email":"zadbooks@info.com"}
